--- a/pages/_includes/home.html
+++ b/pages/_includes/home.html
@@ -22,6 +22,7 @@
   {% set css %}
   {% include "../css/home.min.css" %}
   {% include "../src/components/utility-header/style.css" %}
+  {% include "../src/components/branding/style.css" %}
   {% endset %}
   <!-- feed it through our cssmin filter to minify -->
   <style>
@@ -32,6 +33,7 @@
 <body>
   <header>
     {% include "../src/components/utility-header/utility-header.html" %}
+    {% include "../src/components/branding/branding.html" %}
     <!--<div class="official">
       <div class="container">
         <div class="row">
