updated branding text

--- a/pages/src/components/branding/branding.html
+++ b/pages/src/components/branding/branding.html
@@ -34,7 +34,7 @@
     </div>
     <a href="/">
         <div class="logo-text"><span class="logo-state">State of California</span>
-            <span class="logo-dept">Department of Cannabis Control</span>
+            <span class="logo-dept">Office of Digital Innovation</span>
         </div>
     </a>
 
