--- a/pages/_includes/home.html
+++ b/pages/_includes/home.html
@@ -22,6 +22,7 @@
   {% set css %}
   {% include "../css/home.min.css" %}
   {% include "../src/components/utility-header/style.css" %}
+  {% include "../src/components/alert/style.css" %}
   {% include "../src/components/branding/style.css" %}
   {% endset %}
   <!-- feed it through our cssmin filter to minify -->
@@ -33,6 +34,7 @@
 <body>
   <header>
     {% include "../src/components/utility-header/utility-header.html" %}
+    {% include "../src/components/alert/alert.html" %}
     {% include "../src/components/branding/branding.html" %}
     <!--<div class="official">
       <div class="container">
@@ -44,13 +46,13 @@
       </div>
     </div>-->
 
-    <nav class="navbar navbar-inverse">
+    <!-- <nav class="navbar navbar-inverse">
       <div class="container">
         <div class="float-left navbar-header">
           <a href="/" class="navbar-brand navbar-left">CA.gov</a>
         </div>
       </div>
-    </nav>
+    </nav> -->
   </header>
   <main>
     {{ content | safe }}
