--- a/pages/_includes/home.html
+++ b/pages/_includes/home.html
@@ -24,6 +24,7 @@
   {% include "../src/components/utility-header/style.css" %}
   {% include "../src/components/alert/style.css" %}
   {% include "../src/components/branding/style.css" %}
+  {% include "../src/components/footer/style.css" %}
   {% endset %}
   <!-- feed it through our cssmin filter to minify -->
   <style>
@@ -54,10 +55,18 @@
       </div>
     </nav> -->
   </header>
+
+
+
   <main>
+
     {{ content | safe }}
   </main>
-  <footer>
+
+
+
+  {% include "../src/components/footer/footer.html" %}
+  <!--<footer>
     <div class="alpha-footer footer mt-0">
       <div class="container">
         <div class="row">
@@ -72,7 +81,7 @@
         </div>
       </div>
     </div>
-  </footer>
+  </footer>-->
   <script>
     window.ga = window.ga || function () { (ga.q = ga.q || []).push(arguments) }; ga.l = +new Date;
     ga('create', 'UA-154336791-1', 'auto');
