--- a/pages/_includes/home.html
+++ b/pages/_includes/home.html
@@ -20,22 +20,19 @@
   <meta content="California Office of Digital Innovation (ODI)" name="description">
   <!-- capture the CSS content as a Nunjucks variable -->
   {% set css %}
-  {% include "../css/home.min.css" %}
-  {% include "../src/components/utility-header/style.css" %}
-  {% include "../src/components/alert/style.css" %}
-  {% include "../src/components/branding/style.css" %}
+  {% include "../css/index.css" %}
   {% endset %}
   <!-- feed it through our cssmin filter to minify -->
   <style>
-    {{ css | safe}}
+    {{ css | cssmin | safe }}
   </style>
 </head>
 
 <body>
   <header>
-    {% include "../src/components/utility-header/utility-header.html" %}
-    {% include "../src/components/alert/alert.html" %}
-    {% include "../src/components/branding/branding.html" %}
+    {% include "../../src/components/utility-header/utility-header.html" %}
+    {% include "../../src/components/alert/alert.html" %}
+    {% include "../../src/components/branding/branding.html" %}
     <!--<div class="official">
       <div class="container">
         <div class="row">
