--- a/pages/_includes/home.html
+++ b/pages/_includes/home.html
@@ -71,6 +71,10 @@
     </div>
   </footer>
   <script>
+  {% include "../../src/components/alert/index.js" %}
+  </script>
+
+  <script>
     window.ga = window.ga || function () { (ga.q = ga.q || []).push(arguments) }; ga.l = +new Date;
     ga('create', 'UA-154336791-1', 'auto');
     ga('send', 'pageview');
