--- a/pages/css/index.css
+++ b/pages/css/index.css
@@ -730,56 +730,91 @@ li.list-group-item.alpha-footer {
     margin-left: -.6rem; } }
 
 /* bootstrap stuff grabbed from the page on alpha, this should all be replaced with components */
-.cagov-stack * + * {
-  margin-top: 1.5rem; }
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0; }
 
-.alignfull, .full-max-width, .full-bleed {
+.alignfull,
+.full-max-width,
+.full-bleed {
   width: 100vw !important;
   margin-left: calc(50% - 50vw) !important; }
 
 .cagov-alert {
-  padding: 1.5rem;
-  background-color: #1E1569;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  background-color: #1e1569;
   min-height: 50px;
   margin-top: 0 !important;
   margin-bottom: 0 !important;
   color: #fff !important; }
-  .cagov-alert h3, .cagov-alert p {
+  .cagov-alert h3,
+  .cagov-alert p {
     color: #fff !important; }
   .cagov-alert .container {
     width: 100%;
     max-width: 1140px;
-    padding-left: 1rem;
-    margin: 0 auto;
-    padding-bottom: 0.5rem;
-    border-left: 5px solid #FEC02F; }
+    padding-left: 16px;
+    margin: 0 auto; }
+    .cagov-alert .container .alert-content {
+      border-left: 5px solid #fec02f;
+      margin-left: 0;
+      padding-left: 16px;
+      padding-bottom: 8px;
+      position: relative; }
   .cagov-alert .alert-title {
-    font-size: 1.125rem;
+    font-size: 1.5rem;
     font-weight: 700;
     padding-top: 0;
     padding-bottom: 0;
     margin: 0; }
   .cagov-alert .alert-text {
-    margin-top: .725rem !important; }
+    margin-top: 16px !important;
+    font-size: 1.125rem; }
   .cagov-alert .button-white {
     margin-top: 2rem !important;
     display: block; }
-  .cagov-alert .button-white a {
-    color: #1E1569 !important;
-    padding: .725rem !important;
-    background-color: #fff;
-    border-radius: 4px !important;
-    transition: all .3s ease;
-    text-decoration: none;
-    position: relative;
-    top: -.4rem; }
-  .cagov-alert .button-white a:hover {
-    color: #1E1569 !important;
-    padding: .725rem !important;
-    background-color: #FEC02F !important;
-    border-radius: 4px; }
-  .cagov-alert .button-white a:focus {
-    outline: 2px solid #FEC02F; }
+    .cagov-alert .button-white a {
+      color: #1e1569 !important;
+      padding: 0.725rem !important;
+      background-color: #fff;
+      font-size: 1.125rem;
+      font-weight: 700;
+      border-radius: 5px !important;
+      transition: all 0.3s ease;
+      text-decoration: none;
+      position: relative;
+      top: -0.4rem; }
+      .cagov-alert .button-white a:hover {
+        color: #1e1569 !important;
+        padding: 0.725rem !important;
+        background-color: #fec02f !important;
+        border-radius: 4px; }
+      .cagov-alert .button-white afocus {
+        outline: 2px solid #fec02f; }
+  .cagov-alert .btn-close {
+    position: absolute;
+    right: 0;
+    top: 0;
+    background: transparent;
+    border: none;
+    margin: 0 !important;
+    padding: 0 !important; }
+    .cagov-alert .btn-close svg path {
+      fill: #fff; }
+    .cagov-alert .btn-close:hover svg path {
+      fill: #fec02f; }
+    .cagov-alert .btn-close:focus {
+      outline: 2px solid #fec02f; }
+      .cagov-alert .btn-close:focus svg path {
+        fill: #fec02f; }
 
 /* branding */
 .branding {
