added more languages button JavaScript to utility header

--- a/pages/_includes/home.html
+++ b/pages/_includes/home.html
@@ -72,6 +72,7 @@
   </footer>
   <script>
   {% include "../../src/components/alert/index.js" %}
+  {% include "../../src/components/utility-header/index.js" %}
   </script>
 
   <script>
