--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,3 +1,4 @@
+@import './_variables';
 @import './legacy/_home'; /* bootstrap stuff grabbed from the page on alpha, this should all be replaced with components */
 @import '../components/alert/_style';
 @import '../components/branding/_style';
