--- a/src/components/utility-header/_style.scss
+++ b/src/components/utility-header/_style.scss
@@ -1,56 +1,113 @@
 /*official*/
-	.official-header {
-		background-color: #f9f9fa;
-		padding: 5px 0 5px 0;
-		width: 100%;
-	}
-	.official-header .container {
+.official-header {
+	background-color: $gray-100;
+	padding: 5px 0 5px 0;
+	width: 100%;
+
+	.container {
 		display: flex;
 		flex-wrap: wrap;
 		align-items: center;
+		justify-content: space-between;
 		box-sizing: border-box;
-		max-width: 1140px;
+		max-width: $w-lg;
 		margin: 0 auto;
 		padding: 0 10px 0 10px;
 	}
-	.official-header svg {
+
+	.ofiicial-logo {
+		display: flex;
+		flex-wrap: wrap;
+		align-items: center;
+	}
+
+	svg {
 		padding: 0;
-	}
-	.official-header svg .ca {
-		fill: #fec02f;
-	}
-	.official-header svg .gov {
-		fill: #0f1e6b;
-	}
-	.official-tag {
-		margin: 0;
-		margin-left: 20px;
-		font-size: 0.95rem;
-	}
-	@media (min-width:768px) {
-		.official-languages {
-			margin-left: auto;
+		.ca {
+			fill: $secondary;
+		}
+		.gov {
+			fill: $primary-dark;
 		}
 	}
+
+	.official-tag {
+		margin: 0 20px;
+	}
+
 	.official-languages a {
-		color: #000;
-		padding: 0 .5rem 0 .5rem;
+		color: $black;
+		padding: 0 0.5rem 0 0.5rem;
+
+		&:hover {
+			color: $primary-dark;
+		}
 	}
-	.official-languages a:hover {
-		color:#1E1569;
+
+	.official-languages {
+		display: flex;
+		flex-wrap: wrap;
+		.dropdown {position: relative;}
+		// languages button
+		button.offcial-more {
+			padding-right: 0;
+			border: none;
+			text-decoration: underline;
+			background-color: $white;
+			transition: transform .3s;
+
+			&:hover {
+				color: $primary-dark;
+			}
+			&[aria-expanded="false"] {
+				.caret-down {
+					transition: all .3s;
+					svg {
+						padding: 0 0 0 0;
+						width: 20px;
+						height: 18px;
+						overflow: visible;
+						position: relative;
+						right: 5px;
+					}
+				}
+				
+				
+			}
+			&[aria-expanded="true"] {
+				.caret-down {
+					transition: transform .3s;
+					svg {
+						padding: 0 0 0 0;
+						width: 20px;
+						height: 18px;
+						position: relative;
+						top: 8px;
+						left: 4px;
+						overflow: visible;
+						transform: rotate(180deg);
+					}
+				}
+			}
+		}
+
+		.dropdown-content {
+			background-clip: padding-box;
+			background-color: $white;
+			border: 1px solid $primary;
+			border-radius: 0.25rem;
+			padding: 15px;
+			position: absolute;
+			right: 0px;
+			top: 100%;
+			text-align: left;
+			z-index: 1000;
+			min-width: 150px;
+			display: none;
+			&.show {
+				display: flex;
+				flex-direction:column;
+			}
+		}
 	}
-	.official-languages button.offcial-more {
-		padding-right: 0;
-		border: none;
-		text-decoration: underline;
-		background-color: #fff;
-	}
-	.official-languages button.offcial-more:hover {
-		color:#1E1569;
-	}
-	.official-languages .caret-down svg {
-		padding: 0 0 0 0;
-		width: 20px;
-		height: 18px;
-		overflow: visible;
-	}
+}
