--- a/src/components/branding/_style.scss
+++ b/src/components/branding/_style.scss
@@ -1,4 +1,3 @@
-
 /* branding */
 .branding {
 	box-sizing: border-box;
@@ -7,54 +6,63 @@
 	padding: 5px 10px 5px 10px;
 	display: flex;
 	flex-wrap: wrap;
-	flex-direction: column;
-	// align-items: center;
-	a {
-		color: $black; 
+	justify-content: flex-start;
+	align-items: center;
+	position: relative;
+	.branding-logo {
+		flex: 1 0 650px;
+		color: $black;
 		text-decoration: none;
-	}
-	.logo-text {
-		padding-left: 5px; 
-		display:inline-block;
 
-		.logo-state {
-			font-size: $small-text;
-			margin: 0;
-			padding: 0;
-			height: 20px;
-			line-height: 1.2em;
-			transition: all .3s;
-			display: block;
-		}
-		.logo-dept {
-			font-size: 1.75rem;
-			font-weight: 700;
-			margin: 0;
-			padding: 0;
-			height: 24px;
-			line-height: 1.2em;
-			transition: all .3s;
-			display: block;
+		.logo-text {
+			padding-left: 5px;
+			display: inline-block;
+
+			.logo-state {
+				font-size: $small-text;
+				margin: 0;
+				padding: 0;
+				height: 20px;
+				line-height: 1.2em;
+				transition: all 0.3s;
+				display: block;
+			}
+			.logo-dept {
+				font-size: 1.75rem;
+				font-weight: 700;
+				margin: 0;
+				padding: 0;
+				height: 24px;
+				line-height: 1.2em;
+				transition: all 0.3s;
+				display: block;
+			}
 		}
 	}
 
-	.mobile-search {
+	.mobile-icons {
 		margin-left: auto;
+		display: flex;
+		flex-wrap: wrap;
+		position: absolute;
+		right: 0px;
+		top: 20px;
 	}
 
-	button.search-btn, button.menu-btn  {
-		border:none; 
+	button.search-btn,
+	button.menu-btn {
+		border: none;
 		background: transparent;
 		overflow: visible;
 		padding: 10px 10px;
 		margin-right: 10px;
-		color:$primary;
+		color: $primary;
 
 		&:hover {
 			color: $primary-dark;
 
 			.blue {
-				fill:$primary-dark;
+				fill: $primary-dark;
 			}
 		}
 		&:focus {
@@ -64,20 +72,57 @@
 
 		svg {
 			position: relative;
-    		top: 3px;
+			top: 1px;
 		}
 
 		.blue {
-			fill:$primary;
+			fill: $primary;
+		}
+	}
+
+	// Search box
+	.search-container {
+		display: none; // display none in mobile
+		position: absolute;
+		right: 15px;
+		top: 20px;
+		width: 30%;
+
+		#site-search {
+			display: flex;
+			position: relative;
+			// submit input
+			.search-textfield {
+				border: 1px solid;
+				border-color: $primary-dark;
+				border-radius: 4px;
+				padding: 10px;
+				width: 100%;
+
+			}
+			// submit button
+			.search-submit {
+				right: 0;
+				outline-offset: -2px;
+				position: absolute;
+				background-color: $primary-dark;
+				border: none;
+				border-top-right-radius: 4px;
+				border-bottom-right-radius: 4px;
+				padding: 6px 10px 2px 10px; 
+				svg path {
+					fill: $white;
+				}
+			}
 		}
 	}
 }
 
-
-
-
-@media (min-width:768px) {
-	.branding {flex-direction: row;}
-	.mobile-search {display: none;}
-	.mobile-menu {display: none;}
+@media (min-width: 768px) {
+	.mobile-icons {
+		display: none !important;
+	}
+	.search-container {
+		display: block !important;
+	}
 }
