added search box functionality (for mobile and desctop views

--- a/pages/_includes/home.html
+++ b/pages/_includes/home.html
@@ -73,6 +73,7 @@
   <script>
   {% include "../../src/components/alert/index.js" %}
   {% include "../../src/components/utility-header/index.js" %}
+  {% include "../../src/components/branding/index.js" %}
   </script>
 
   <script>
