--- a/pages/css/index.css
+++ b/pages/css/index.css
@@ -821,16 +821,21 @@ li.list-group-item.alpha-footer {
   box-sizing: border-box;
   max-width: 1140px;
   margin: 0 auto;
-  padding: 5px 10px 5px 10px;
+  padding: 5px 0 5px 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
   align-items: center;
   position: relative; }
+  .branding .logo-img {
+    margin-left: 10px; }
   .branding .branding-logo {
     flex: 1 0 650px;
     color: #000;
-    text-decoration: none; }
+    text-decoration: none;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    margin-top: 10px; }
     .branding .branding-logo .logo-text {
       padding-left: 5px;
       display: inline-block; }
@@ -889,6 +894,20 @@ li.list-group-item.alpha-footer {
     right: 15px;
     top: 20px;
     width: 30%; }
+    .branding .search-container.show {
+      display: block;
+      position: relative;
+      display: block;
+      position: relative;
+      width: 100%;
+      background-color: #f9f9fa;
+      padding: 20px 16px 20px 16px;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      left: 0;
+      border-top: 1px solid #e1e0e3;
+      border-bottom: 1px solid #e1e0e3; }
     .branding .search-container #site-search {
       display: flex;
       position: relative; }
@@ -897,21 +916,38 @@ li.list-group-item.alpha-footer {
         border-color: #1e1569;
         border-radius: 4px;
         padding: 10px;
-        width: 100%; }
+        width: 100%;
+        font-size: 1rem; }
       .branding .search-container #site-search .search-submit {
-        right: 0;
+        position: relative;
+        right: 5px;
         outline-offset: -2px;
-        position: absolute;
         background-color: #1e1569;
-        border: none;
+        border: 1px solid #1e1569;
         border-top-right-radius: 4px;
         border-bottom-right-radius: 4px;
-        padding: 6px 10px 2px 10px; }
+        padding: 7px 14px 4px 14px; }
+        .branding .search-container #site-search .search-submit:hover {
+          background-color: #004abc;
+          border-color: #004abc; }
+        .branding .search-container #site-search .search-submit:focus {
+          outline: 2px solid #fec02f; }
         .branding .search-container #site-search .search-submit svg path {
           fill: #fff; }
+      .branding .search-container #site-search .search-close {
+        color: #1e1569;
+        text-decoration: underline;
+        border: none;
+        background-color: #f9f9fa;
+        padding: 0 15px 0 15px; }
+        .branding .search-container #site-search .search-close:hover {
+          color: #004abc;
+          text-decoration: none; }
+        .branding .search-container #site-search .search-close:focus {
+          outline: 2px solid #fec02f; }
 
 @media (min-width: 768px) {
-  .mobile-icons {
+  .mobile-icons, .search-close {
     display: none !important; }
   .search-container {
     display: block !important; } }
