--- a/src/components/branding/_style.scss
+++ b/src/components/branding/_style.scss
@@ -3,16 +3,22 @@
 	box-sizing: border-box;
 	max-width: 1140px;
 	margin: 0 auto;
-	padding: 5px 10px 5px 10px;
+	padding: 5px 0 5px 0;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: flex-start;
 	align-items: center;
 	position: relative;
+	.logo-img {
+		margin-left: 10px;
+	}
 	.branding-logo {
 		flex: 1 0 650px;
 		color: $black;
 		text-decoration: none;
+		margin-left: 10px;
+		margin-bottom: 10px;
+		margin-top: 10px;
 
 		.logo-text {
 			padding-left: 5px;
@@ -88,6 +94,23 @@
 		top: 20px;
 		width: 30%;
 
+		&.show {
+			display: block;
+			position: relative;
+			display: block;
+			position: relative;
+			width: 100%;
+			background-color: $gray-100;
+			padding: 20px 16px 20px 16px;
+			top: 0;
+			bottom: 0;
+			right: 0;
+			left: 0;
+			border-top: 1px solid $gray-300;
+			border-bottom: 1px solid $gray-300;
+
+		}
+
 		#site-search {
 			display: flex;
 			position: relative;
@@ -98,20 +121,43 @@
 				border-radius: 4px;
 				padding: 10px;
 				width: 100%;
-
+				font-size: 1rem;
 			}
 			// submit button
 			.search-submit {
-				right: 0;
+				position: relative;
+				right: 5px;
 				outline-offset: -2px;
-				position: absolute;
 				background-color: $primary-dark;
-				border: none;
+				border: 1px solid $primary-dark;
 				border-top-right-radius: 4px;
 				border-bottom-right-radius: 4px;
-				padding: 6px 10px 2px 10px; 
+				padding: 7px 14px 4px 14px;
+				&:hover {
+					background-color: $primary;
+					border-color: $primary;
+				}
+				&:focus {
+					outline: 2px solid $secondary;
+				}
 				svg path {
 					fill: $white;
+				}
+			}
+
+			.search-close {
+				
+				color: $primary-dark;
+				text-decoration: underline;
+				border: none;
+				background-color: $gray-100;
+				padding: 0 15px 0 15px;
+				&:hover {
+					color: $primary;
+					text-decoration: none;
+				}
+				&:focus {
+					outline: 2px solid $secondary;
 				}
 			}
 		}
@@ -119,7 +165,7 @@
 }
 
 @media (min-width: 768px) {
-	.mobile-icons {
+	.mobile-icons, .search-close {
 		display: none !important;
 	}
 	.search-container {
