--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -3,3 +3,5 @@
 @import '../components/alert/_style';
 @import '../components/branding/_style';
 @import '../components/utility-header/_style';
+@import '../components/site-footer/_style';
+@import '../components/footer/_style';
