--- a/pages/css/index.css
+++ b/pages/css/index.css
@@ -1035,4 +1035,124 @@ li.list-group-item.alpha-footer {
         display: flex;
         flex-direction: column; }
 
+/* site footer */
+section.site-footer .container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  box-sizing: border-box;
+  max-width: 1140px;
+  margin: 0 auto;
+  padding: 1rem; }
+
+section.site-footer a {
+  color: #004abc; }
+  section.site-footer a:hover {
+    color: #ff8000; }
+  section.site-footer a:focus {
+    outline: 2px solid #fec02f; }
+
+section.site-footer .footer-logo {
+  width: 54px;
+  margin-right: 2rem; }
+  section.site-footer .footer-logo img {
+    width: 100%; }
+
+section.site-footer .footer-secondary-links {
+  display: flex;
+  flex-direction: column;
+  font-size: 1.2rem; }
+  section.site-footer .footer-secondary-links a {
+    margin-right: 1.7rem;
+    padding-top: .5rem;
+    padding-bottom: .5rem; }
+
+section.site-footer .footer-social-links {
+  padding-top: .7rem;
+  padding-bottom: .7rem; }
+  section.site-footer .footer-social-links a {
+    text-decoration: none;
+    padding-right: .3rem;
+    padding-left: .3rem;
+    transition: all 0.3s ease; }
+    section.site-footer .footer-social-links a svg path {
+      fill: #004abc; }
+    section.site-footer .footer-social-links a:hover svg path {
+      fill: #1e1569; }
+
+@media (min-width: 991px) {
+  .footer-secondary-links, section.site-footer .container {
+    flex-direction: row !important;
+    align-items: center; }
+  .footer-social-links {
+    margin-left: auto; } }
+
+.bg-light-grey {
+  background-color: #f9f9fa; }
+
+.pt-0 {
+  padding-top: 0 !important; }
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0; }
+
+/* footer */
+footer .container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  box-sizing: border-box;
+  max-width: 1140px;
+  margin: 0 auto;
+  padding: 1rem; }
+
+footer a:hover {
+  color: #1e1569; }
+
+footer a:focus {
+  outline: 2px solid #fec02f; }
+
+footer .footer-secondary-links {
+  display: flex;
+  flex-direction: column;
+  font-size: 1.2rem; }
+  footer .footer-secondary-links a {
+    margin-right: 1.7rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem; }
+
+footer .bg-light-grey svg {
+  padding: 0; }
+  footer .bg-light-grey svg .ca {
+    fill: #fec02f; }
+  footer .bg-light-grey svg .gov {
+    fill: #1e1569; }
+
+footer .cagov-logo {
+  padding: 5px 2rem 5px 0; }
+
+footer .bg-light-grey a,
+footer .copyright {
+  color: #000; }
+
+.bg-light-grey {
+  background-color: #f9f9fa; }
+
+.pt-0 {
+  padding-top: 0 !important; }
+
+@media (min-width: 991px) {
+  .footer-secondary-links,
+  footer .container {
+    flex-direction: row;
+    align-items: center; } }
+
 /*# sourceMappingURL=index.css.map */
