--- a/src/components/branding/_style.scss
+++ b/src/components/branding/_style.scss
@@ -1,7 +1,7 @@
 /* branding */
 .branding {
 	box-sizing: border-box;
-	max-width: 1140px;
+	max-width: $w-lg;
 	margin: 0 auto;
 	padding: 5px 0 5px 0;
 	display: flex;
@@ -146,7 +146,6 @@
 			}
 
 			.search-close {
-				
 				color: $primary-dark;
 				text-decoration: underline;
 				border: none;
