add 11ty regen after js change

--- a/pages/css/index.css
+++ b/pages/css/index.css
@@ -1038,7 +1038,7 @@ li.list-group-item.alpha-footer {
         display: flex;
         flex-direction: column; }
 
-/* stiky header */
+/* sticky header */
 @media (min-width: 768px) {
   header {
     position: sticky;
