added navigation component and umenu button toggle

--- a/pages/_includes/home.html
+++ b/pages/_includes/home.html
@@ -33,6 +33,7 @@
     {% include "../../src/components/utility-header/utility-header.html" %}
     {% include "../../src/components/alert/alert.html" %}
     {% include "../../src/components/branding/branding.html" %}
+    {% include "../../src/components/navigation/navigation.html" %}
     <!--<div class="official">
       <div class="container">
         <div class="row">
