--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -5,3 +5,4 @@
 @import '../components/utility-header/_style';
 @import '../components/site-footer/_style';
 @import '../components/footer/_style';
+@import '../components/navigation/_style';
