--- a/pages/css/index.css
+++ b/pages/css/index.css
@@ -819,7 +819,8 @@ li.list-group-item.alpha-footer {
 /* branding */
 .branding {
   box-sizing: border-box;
-  background-color: #fff; }
+  background-color: #fff;
+  border-bottom: 1px solid #e1e0e3; }
   .branding .container {
     max-width: 1140px;
     margin: 0 auto;
@@ -947,6 +948,51 @@ li.list-group-item.alpha-footer {
           text-decoration: none; }
         .branding .search-container #site-search .search-close:focus {
           outline: 2px solid #fec02f; }
+
+.toggle-menu {
+  position: relative;
+  transform: rotate(0deg);
+  transition: .25s ease-in-out;
+  cursor: pointer; }
+  .toggle-menu .menu-btn-text {
+    margin-left: 25px; }
+  .toggle-menu span {
+    display: block;
+    margin-left: 0;
+    margin-right: 0;
+    position: absolute;
+    height: 2px;
+    width: 20px;
+    background: #004abc;
+    border-radius: 5px;
+    opacity: 1;
+    left: 10px;
+    transform: rotate(0deg);
+    transition: .15s ease-in-out; }
+    .toggle-menu span:nth-child(1) {
+      top: 15px; }
+    .toggle-menu span:nth-child(2), .toggle-menu span:nth-child(3) {
+      top: 22px; }
+    .toggle-menu span:nth-child(4) {
+      top: 29px; }
+  .toggle-menu[aria-expanded="true"] span:nth-child(1) {
+    top: 12px;
+    width: 0%;
+    left: 20%; }
+  .toggle-menu[aria-expanded="true"] span:nth-child(2) {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg); }
+  .toggle-menu[aria-expanded="true"] span:nth-child(3) {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg); }
+  .toggle-menu[aria-expanded="true"] span:nth-child(4) {
+    top: 12px;
+    width: 0%;
+    left: 20%; }
 
 @media (min-width: 768px) {
   .mobile-icons,
@@ -1164,5 +1210,28 @@ footer .copyright {
   footer .container {
     flex-direction: row;
     align-items: center; } }
+
+/* branding */
+.navigation {
+  box-sizing: border-box;
+  background-color: #fff;
+  border-bottom: 1px solid #e1e0e3; }
+  .navigation .container {
+    max-width: 1140px;
+    margin: 0 auto;
+    padding: 12px 16px 13px 16px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+    position: relative; }
+  .navigation.mobile {
+    display: none; }
+  .navigation.show {
+    display: block !important; }
+
+@media (min-width: 768px) {
+  .navigation {
+    display: block !important; } }
 
 /*# sourceMappingURL=index.css.map */
