--- a/src/components/branding/_style.scss
+++ b/src/components/branding/_style.scss
@@ -2,6 +2,7 @@
 .branding {
 	box-sizing: border-box;
 	background-color: $white;
+	border-bottom: 1px solid $gray-300;
 	.container {
 		max-width: $w-lg;
 		margin: 0 auto;
@@ -67,6 +68,7 @@
 		padding: 10px 10px;
 		margin-right: 10px;
 		color: $primary;
+		
 
 		&:hover {
 			color: $primary-dark;
@@ -89,6 +91,9 @@
 			fill: $primary;
 		}
 	}
+
+
+	// 
 
 	// Search box
 	.search-container {
@@ -164,6 +169,75 @@
 			}
 		}
 	}
+}
+
+
+
+// Hamburger menu to X transition
+.toggle-menu {
+    position: relative;
+    transform: rotate(0deg);
+    transition: .25s ease-in-out;
+    cursor: pointer;
+
+	.menu-btn-text {
+		margin-left: 25px;
+	}
+
+    span {
+        display: block;
+        margin-left: 0;
+        margin-right: 0;
+        position: absolute;
+        height: 2px;
+        width: 20px;
+        background: $primary;
+        border-radius: 5px;
+        opacity: 1;
+        left: 10px;
+        transform: rotate(0deg);
+        transition: .15s ease-in-out;
+
+        &:nth-child(1) {
+            top: 15px;
+        }
+
+        &:nth-child(2), &:nth-child(3) {
+            top: 22px;
+        }
+
+        &:nth-child(4) {
+            top: 29px;
+        }
+    }
+
+    &[aria-expanded="true"] {
+        span:nth-child(1) {
+            top: 12px;
+            width: 0%;
+            left: 20%;
+        }
+
+        span:nth-child(2) {
+            -webkit-transform: rotate(45deg);
+            -moz-transform: rotate(45deg);
+            -o-transform: rotate(45deg);
+            transform: rotate(45deg);
+        }
+
+        span:nth-child(3) {
+            -webkit-transform: rotate(-45deg);
+            -moz-transform: rotate(-45deg);
+            -o-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+        }
+
+        span:nth-child(4) {
+            top: 12px;
+            width: 0%;
+            left: 20%;
+        }
+    }
 }
 
 @media (min-width: 768px) {
