--- a/src/components/branding/branding.html
+++ b/src/components/branding/branding.html
@@ -26,18 +26,12 @@
             </div>
             <div class="mobile-menu">
 
-                <button class="menu-btn">
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                        width="17px" height="17px" viewBox="0 0 17 17" style="enable-background:new 0 0 17 17;"
-                        xml:space="preserve">
-                        <path class="blue" d="M1.3,3.2h14.5c0.6,0,1.1-0.5,1.1-1.1c0-0.6-0.5-1.1-1.1-1.1L1.3,1C0.7,1,0.2,1.5,0.2,2.1
-        C0.2,2.7,0.7,3.2,1.3,3.2L1.3,3.2z" />
-                        <path class="blue" d="M15.8,7.7H1.3c-0.6,0-1.1,0.5-1.1,1.1c0,0.6,0.5,1.1,1.1,1.1h14.5c0.6,0,1.1-0.5,1.1-1.1
-        C16.9,8.2,16.4,7.7,15.8,7.7z" />
-                        <path class="blue" d="M15.8,14.2H1.3c-0.6,0-1.1,0.5-1.1,1.1c0,0.6,0.5,1.1,1.1,1.1h14.5c0.6,0,1.1-0.5,1.1-1.1
-        C16.9,14.7,16.4,14.2,15.8,14.2z" />
-                    </svg>
-                    Menu
+                <button class="menu-btn toggle-menu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <div class="menu-btn-text">Menu</div>
                 </button>
             </div>
         </div>
@@ -65,4 +59,5 @@
         </div>
     </div>
 
-</div><!--end branding-->
+</div>
+<!--end branding-->
