--- a/src/components/branding/branding.html
+++ b/src/components/branding/branding.html
@@ -1,7 +1,7 @@
 <!--branding-->
 <div class="branding">
     <div class="container">
-        <a href="/"><img class="logo-img" src="https://files.covid19.ca.gov/img/circle-logo.png"
+        <a href="/" class="logo"><img class="logo-img" src="https://files.covid19.ca.gov/img/circle-logo.png"
                 alt="organization logo"></a>
         <a href="/" class="branding-logo">
             <div class="logo-text"><span class="logo-state">State of California</span>
