--- a/pages/_includes/home-es.html
+++ b/pages/_includes/home-es.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" xml:lang="en">
+<html lang="es" xml:lang="es">
 
 <head>
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
@@ -16,7 +16,7 @@
   <meta content="Digital COVID-19 Vaccine Record portal" property="og:description">
   <meta content="https://vaxrecord.cdt.ca.gov/" property="og:url">
   <meta content="summary_large_image" name="twitter:card">
-  <title>Frequently Asked Questions – Digital COVID-19 Vaccine Record</title>
+  <title>Preguntas frecuentes - Registro digital de vacunación contra el COVID-19</title>
   <meta content="Digital COVID-19 Vaccine Record portal" name="description">
   <!-- capture the CSS content as a Nunjucks variable -->
   {% set css %}
@@ -37,7 +37,7 @@
     {{ content | safe }}
   </main>
 
-  {% include "../../src/components/footer/footer.html" %}
+  {% include "../../src/components/footer/footer-es.html" %}
   
 <!-- capture the JS content as a Nunjucks variable -->
 {% set js %}
