--- a/src/components/footer/footer-ch-hant.html
+++ b/src/components/footer/footer-ch-hant.html
@@ -36,11 +36,11 @@
             </a>
 
             <div class="footer-secondary-links">
-                <a href="https://vaxrecord.cdt.ca.gov/">Vaccine Record Portal Home</a>
-                <a href="https://www.ca.gov/use/">Conditions of Use</a>
-                <a href="https://www.ca.gov/privacy-policy/">Privacy Policy</a>
-                <a href="https://www.ca.gov/accessibility/">Accessibility</a>
-                <a href="http://cdph.ca.gov/covidvaccinerecord">Contact us</a>
+                <a href="https://vaxrecord.cdt.ca.gov/">疫苗接种首页</a>
+                <a href="https://www.ca.gov/use/">使用条款</a>
+                <a href="https://www.ca.gov/privacy-policy/">隐私政策</a>
+                <a href="https://www.ca.gov/accessibility/">无障碍</a>
+                <a href="http://cdph.ca.gov/covidvaccinerecord">联系我们</a>
             </div>
 
 
