--- a/src/components/footer/footer-ko.html
+++ b/src/components/footer/footer-ko.html
@@ -36,18 +36,18 @@
             </a>
 
             <div class="footer-secondary-links">
-                <a href="https://vaxrecord.cdt.ca.gov/">Vaccine Record Portal Home</a>
-                <a href="https://www.ca.gov/use/">Conditions of Use</a>
-                <a href="https://www.ca.gov/privacy-policy/">Privacy Policy</a>
-                <a href="https://www.ca.gov/accessibility/">Accessibility</a>
-                <a href="http://cdph.ca.gov/covidvaccinerecord">Contact us</a>
+                <a href="https://vaxrecord.cdt.ca.gov/">Vaccine Record 홈페이지</a>
+                <a href="https://www.ca.gov/use/">사용 조건</a>
+                <a href="https://www.ca.gov/privacy-policy/">개인 정보 보호 정책</a>
+                <a href="https://www.ca.gov/accessibility/">접근성</a>
+                <a href="http://cdph.ca.gov/covidvaccinerecord">연락 정보</a>
             </div>
 
 
 
         </div>
         <div class="container pt-0">
-            <p class="copyright">Copyright © 2021 State of California</p>
+            <p class="copyright">Copyright © 2021 캘리포니아 주</p>
         </div>
     </div>
 </footer>
