--- a/src/components/utility-header/utility-header.html
+++ b/src/components/utility-header/utility-header.html
@@ -34,15 +34,16 @@
                     </g>
                 </svg>
             </a>
-            <p class="official-tag">Official website of the State of California</p>
+            <p class="official-tag">State of California</p>
         </div>
 
 
 
         <div class="official-languages">
-            <a href="#">English</a>
-            <a href="#" lang="es" hreflang="es">Espańol</a>
-            <a href="#" lang="zh-cn" hreflang="zh-cn">中文</a>
+            <a href="/faq/">English</a>
+            <a href="/faq-es/" lang="es" hreflang="es">Espańol</a>
+            <a class="dropdown-item" lang="tl" hreflang="tl" href="/faq-tg/">Tagalog</a>
+            
             <div class="dropdown">
                 <button id="languages-btn" class="offcial-more" aria-expanded="false">More <span class="caret-down"
                         aria-hidden="true"><svg version="1.1" xmlns="http://www.w3.org/2000/svg"
@@ -53,21 +54,15 @@
                         </svg></span></button>
 
                 <div class="dropdown-content" aria-labelledby="languages-btn">
-                    <a class="dropdown-item" lang="es" hreflang="es" href="#">Español</a>
 
-                    <a class="dropdown-item" lang="tl" hreflang="tl" href="#">Tagalog</a>
+                    
 
-                    <a class="dropdown-item" lang="ar" hreflang="ar" href="#">العربية</a>
+                    <a class="dropdown-item" lang="ar" hreflang="ar" href="/faq-ar/">العربية</a>
+                    <a href="/faq-ch/" lang="zh-cn" hreflang="zh-cn">中文</a>
+                    <a class="dropdown-item" lang="zh-Hant" hreflang="zh-Hant" href="/faq-ch-hant/">更多資訊</a>
+                    <a class="dropdown-item" lang="ko" hreflang="ko" href="/faq-ko/">한국어</a>
+                    <a class="dropdown-item" lang="vi" hreflang="vi" href="/faq-vi/">Tiếng Việt</a>
 
-                    <a class="dropdown-item" lang="ko" hreflang="ko" href="#">한국어</a>
-
-                    <a class="dropdown-item" lang="vi" hreflang="vi" href="#">Tiếng Việt</a>
-
-                    <a class="dropdown-item" lang="zh-Hans" hreflang="zh-Hans" href="#">简体中文</a>
-
-                    <a class="dropdown-item" lang="zh-Hant" hreflang="zh-Hant" href="#">繁體中文</a>
-
-                    <a class="dropdown-item" href="/translate/">More …</a>
                 </div>
 
             </div>
