--- a/pages/css/index.css
+++ b/pages/css/index.css
@@ -1,3 +1,196 @@
+@import url("https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;700&display=swap");
+.color-primary, .color-blue {
+  color: #0285BC !important; }
+
+.color-primary-dark, .color-darkblue {
+  color: #22489C !important; }
+
+.color-secondary, .color-yellow {
+  color: #fec02f !important; }
+
+.color-secondary-dark, .color-orange {
+  color: #F06724 !important; }
+
+.pt-xs {
+  padding-top: 8px !important; }
+
+.pt-sm {
+  padding-top: 16px !important; }
+
+.pt-md {
+  padding-top: 24px !important; }
+
+.pt-lg {
+  padding-top: 32px !important; }
+
+.pt-xl {
+  padding-top: 48px !important; }
+
+.pb-xs {
+  padding-bottom: 8px !important; }
+
+.pb-sm {
+  padding-bottom: 16px !important; }
+
+.pb-md {
+  padding-bottom: 24px !important; }
+
+.pb-lg {
+  padding-bottom: 32px !important; }
+
+.pb-xl {
+  padding-bottom: 48px !important; }
+
+.pl-xs {
+  padding-left: 8px !important; }
+
+.pl-sm {
+  padding-left: 16px !important; }
+
+.pl-md {
+  padding-left: 24px !important; }
+
+.pl-lg {
+  padding-left: 32px !important; }
+
+.pl-xl {
+  padding-left: 48px !important; }
+
+.pr-xs {
+  padding-right: 8px !important; }
+
+.pr-sm {
+  padding-right: 16px !important; }
+
+.pr-md {
+  padding-right: 24px !important; }
+
+.pr-lg {
+  padding-right: 32px !important; }
+
+.pr-xl {
+  padding-right: 48px !important; }
+
+.pr-xs {
+  padding-right: 8px !important; }
+
+.pr-sm {
+  padding-right: 16px !important; }
+
+.pr-md {
+  padding-right: 24px !important; }
+
+.pr-lg {
+  padding-right: 32px !important; }
+
+.pr-xl {
+  padding-right: 48px !important; }
+
+.p-xs {
+  padding: 8px !important; }
+
+.p-sm {
+  padding: 16px !important; }
+
+.p-md {
+  padding: 24px !important; }
+
+.p-lg {
+  padding: 32px !important; }
+
+.p-xl {
+  padding: 48px !important; }
+
+.mt-xs {
+  margin-top: 8px !important; }
+
+.mt-sm {
+  margin-top: 48px !important; }
+
+.mt-md {
+  margin-top: 64px !important; }
+
+.mt-lg {
+  margin-top: 96px !important; }
+
+.mt-xl {
+  margin-top: 192px !important; }
+
+.mb-xs {
+  margin-bottom: 8px !important; }
+
+.mb-sm {
+  margin-bottom: 48px !important; }
+
+.mb-md {
+  margin-bottom: 64px !important; }
+
+.mb-lg {
+  margin-bottom: 96px !important; }
+
+.mb-xl {
+  margin-bottom: 192px !important; }
+
+.ml-xs {
+  margin-left: 8px !important; }
+
+.ml-sm {
+  margin-left: 48px !important; }
+
+.ml-md {
+  margin-left: 64px !important; }
+
+.ml-lg {
+  margin-left: 96px !important; }
+
+.ml-xl {
+  margin-left: 192px !important; }
+
+.mr-xs {
+  margin-right: 8px !important; }
+
+.mr-sm {
+  margin-right: 48px !important; }
+
+.mr-md {
+  margin-right: 64px !important; }
+
+.mr-lg {
+  margin-right: 96px !important; }
+
+.mr-xl {
+  margin-right: 192px !important; }
+
+.mr-xs {
+  margin-right: 8px !important; }
+
+.mr-sm {
+  margin-right: 48px !important; }
+
+.mr-md {
+  margin-right: 64px !important; }
+
+.mr-lg {
+  margin-right: 96px !important; }
+
+.mr-xl {
+  margin-right: 192px !important; }
+
+.m-xs {
+  margin: 8px !important; }
+
+.m-sm {
+  margin: 48px !important; }
+
+.m-md {
+  margin: 64px !important; }
+
+.m-lg {
+  margin: 96px !important; }
+
+.m-xl {
+  margin: 192px !important; }
+
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
@@ -46,7 +239,7 @@ body {
 h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
   margin-top: 0;
   margin-bottom: 0.5rem;
-  font-weight: 500;
+  font-weight: 700;
   line-height: 1.2; }
 
 h1, .h1 {
@@ -440,30 +633,6 @@ main {
 .bg-light {
   background-color: #f8f9fa !important; }
 
-@font-face {
-  font-family: "Public Sans Extra Bold";
-  font-style: normal;
-  font-display: swap;
-  src: url(/css/fonts/publicsans-extrabold-webfont.woff2) format("woff2"), url(/css/fonts/publicsans-extrabold-webfont.woff) format("woff"); }
-
-@font-face {
-  font-family: "Public Sans Bold";
-  font-style: normal;
-  font-display: swap;
-  src: url(/css/fonts/publicsans-bold-webfont.woff2) format("woff2"), url(/css/fonts/publicsans-bold-webfont.woff) format("woff"); }
-
-@font-face {
-  font-family: "Public Sans Light";
-  font-style: normal;
-  font-display: swap;
-  src: url(/css/fonts/publicsans-light-webfont.woff2) format("woff2"), url(/css/fonts/publicsans-light-webfont.woff) format("woff"); }
-
-@font-face {
-  font-family: "Public Sans";
-  font-style: normal;
-  font-display: swap;
-  src: url(/css/fonts/publicsans-regular-webfont.woff2) format("woff2"), url(/css/fonts/publicsans-regular-webfont.woff) format("woff"); }
-
 a.btn {
   background: #000;
   color: #fff;
@@ -509,7 +678,7 @@ html {
 
 h1, h2, h3, h4, .h1, .h2, .h3, .h4 {
   color: #000;
-  font-family: "Public Sans Bold", sans-serif; }
+  font-family: "Public Sans", sans-serif; }
 
 h1 {
   padding-bottom: .25rem; }
@@ -559,7 +728,7 @@ a.list-group-item {
   border-color: #cccccc; }
 
 .list-group-flush.list-group-item {
-  font-family: "Public Sans Bold", sans-serif; }
+  font-family: "Public Sans", sans-serif; }
 
 a.navbar-brand, a.navbar-brand:visited {
   text-decoration: none !important; }
@@ -569,7 +738,7 @@ a.navbar-brand, a.navbar-brand:visited {
   margin-bottom: 0; }
 
 .navbar-brand {
-  font-family: 'Public Sans Bold', sans-serif;
+  font-family: 'Public Sans', sans-serif;
   padding-left: 35px;
   background-repeat: no-repeat;
   background-position: 5px 50%;
@@ -706,7 +875,7 @@ li.list-group-item.alpha-footer {
   border-top: 2px #ccc solid;
   padding-top: 1rem;
   font-size: 1.5rem;
-  font-family: "Public Sans Bold", sans-serif; }
+  font-family: "Public Sans", sans-serif; }
 
 @media (min-width: 768px) {
   .official p {
@@ -750,7 +919,7 @@ li.list-group-item.alpha-footer {
 .cagov-alert {
   padding-top: 24px;
   padding-bottom: 24px;
-  background-color: #1e1569;
+  background-color: #22489C;
   min-height: 50px;
   margin-top: 0 !important;
   margin-bottom: 0 !important;
@@ -782,7 +951,7 @@ li.list-group-item.alpha-footer {
     margin-top: 2rem !important;
     display: block; }
     .cagov-alert .button-white a {
-      color: #1e1569 !important;
+      color: #22489C !important;
       padding: 0.725rem !important;
       background-color: #fff;
       font-size: 1.125rem;
@@ -793,7 +962,7 @@ li.list-group-item.alpha-footer {
       position: relative;
       top: -0.4rem; }
       .cagov-alert .button-white a:hover {
-        color: #1e1569 !important;
+        color: #22489C !important;
         padding: 0.725rem !important;
         background-color: #fec02f !important;
         border-radius: 4px; }
@@ -824,7 +993,7 @@ li.list-group-item.alpha-footer {
   .branding .container {
     max-width: 1140px;
     margin: 0 auto;
-    padding: 5px 0 0 0;
+    padding: 5px 0 0 10px;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
@@ -835,29 +1004,32 @@ li.list-group-item.alpha-footer {
     .branding .logo:focus {
       outline: 2px solid #fec02f; }
   .branding .logo-img {
-    margin-left: 10px; }
-  .branding .branding-logo {
-    flex: 1 0 650px;
-    color: #000;
-    text-decoration: none;
     margin-left: 10px;
+    width: 70px; }
+  .branding .branding-logo {
+    color: #22489C;
+    text-decoration: none;
+    margin-left: 5px;
     margin-bottom: 10px;
-    margin-top: 10px; }
+    margin-top: 0px; }
     .branding .branding-logo:focus {
       outline: 2px solid #fec02f; }
     .branding .branding-logo .logo-text {
       padding-left: 5px;
       display: inline-block; }
       .branding .branding-logo .logo-text .logo-state {
-        font-size: 1rem;
+        font-size: 1.4rem;
+        font-family: "Public Sans",sans-serif !important;
+        font-weight: 700;
         margin: 0;
         padding: 0;
-        height: 20px;
+        height: 24px;
         line-height: 1.2em;
         transition: all 0.3s;
         display: block; }
       .branding .branding-logo .logo-text .logo-dept {
-        font-size: 1.75rem;
+        font-size: 1.4rem;
+        font-family: "Public Sans",sans-serif !important;
         font-weight: 700;
         margin: 0;
         padding: 0;
@@ -879,16 +1051,16 @@ li.list-group-item.alpha-footer {
     overflow: visible;
     padding: 10px 10px;
     margin-right: 10px;
-    color: #004abc; }
+    color: #0285BC; }
     .branding button.search-btn:hover,
     .branding button.menu-btn:hover {
-      color: #1e1569; }
+      color: #22489C; }
       .branding button.search-btn:hover .blue,
       .branding button.menu-btn:hover .blue {
-        fill: #1e1569; }
+        fill: #22489C; }
     .branding button.search-btn:focus,
     .branding button.menu-btn:focus {
-      color: #1e1569;
+      color: #22489C;
       outline: 2px solid #fec02f; }
     .branding button.search-btn svg,
     .branding button.menu-btn svg {
@@ -896,7 +1068,7 @@ li.list-group-item.alpha-footer {
       top: 1px; }
     .branding button.search-btn .blue,
     .branding button.menu-btn .blue {
-      fill: #004abc; }
+      fill: #0285BC; }
   .branding .search-container {
     display: none;
     position: absolute;
@@ -922,7 +1094,7 @@ li.list-group-item.alpha-footer {
       position: relative; }
       .branding .search-container #site-search .search-textfield {
         border: 1px solid;
-        border-color: #1e1569;
+        border-color: #22489C;
         border-radius: 4px;
         padding: 10px;
         width: 100%;
@@ -931,26 +1103,26 @@ li.list-group-item.alpha-footer {
         position: relative;
         right: 5px;
         outline-offset: -2px;
-        background-color: #1e1569;
-        border: 1px solid #1e1569;
+        background-color: #22489C;
+        border: 1px solid #22489C;
         border-top-right-radius: 4px;
         border-bottom-right-radius: 4px;
         padding: 7px 14px 4px 14px; }
         .branding .search-container #site-search .search-submit:hover {
-          background-color: #004abc;
-          border-color: #004abc; }
+          background-color: #0285BC;
+          border-color: #0285BC; }
         .branding .search-container #site-search .search-submit:focus {
           outline: 2px solid #fec02f; }
         .branding .search-container #site-search .search-submit svg path {
           fill: #fff; }
       .branding .search-container #site-search .search-close {
-        color: #1e1569;
+        color: #22489C;
         text-decoration: underline;
         border: none;
         background-color: #f9f9fa;
         padding: 0 15px 0 15px; }
         .branding .search-container #site-search .search-close:hover {
-          color: #004abc;
+          color: #0285BC;
           text-decoration: none; }
         .branding .search-container #site-search .search-close:focus {
           outline: 2px solid #fec02f; }
@@ -969,7 +1141,7 @@ li.list-group-item.alpha-footer {
     position: absolute;
     height: 2px;
     width: 20px;
-    background: #004abc;
+    background: #0285BC;
     border-radius: 5px;
     opacity: 1;
     left: 10px;
@@ -982,7 +1154,7 @@ li.list-group-item.alpha-footer {
     .toggle-menu span:nth-child(4) {
       top: 29px; }
   .toggle-menu:hover span, .toggle-menu:focus span {
-    background: #1e1569; }
+    background: #22489C; }
   .toggle-menu[aria-expanded="true"] span:nth-child(1) {
     top: 12px;
     width: 0%;
@@ -1034,14 +1206,14 @@ li.list-group-item.alpha-footer {
     .official-header svg .ca {
       fill: #fec02f; }
     .official-header svg .gov {
-      fill: #1e1569; }
+      fill: #22489C; }
   .official-header .official-tag {
     margin: 0 10px; }
   .official-header .official-languages a {
     color: #000;
     padding: 0 0.5rem 0 0.5rem; }
     .official-header .official-languages a:hover {
-      color: #1e1569; }
+      color: #22489C; }
   .official-header .official-languages {
     display: flex;
     flex-wrap: wrap; }
@@ -1054,7 +1226,7 @@ li.list-group-item.alpha-footer {
       background-color: #fff;
       transition: transform .3s; }
       .official-header .official-languages button.offcial-more:hover {
-        color: #1e1569; }
+        color: #22489C; }
       .official-header .official-languages button.offcial-more[aria-expanded="false"] .caret-down {
         transition: all .3s; }
         .official-header .official-languages button.offcial-more[aria-expanded="false"] .caret-down svg {
@@ -1078,7 +1250,7 @@ li.list-group-item.alpha-footer {
     .official-header .official-languages .dropdown-content {
       background-clip: padding-box;
       background-color: #fff;
-      border: 1px solid #004abc;
+      border: 1px solid #0285BC;
       border-radius: 0.25rem;
       padding: 15px;
       position: absolute;
@@ -1110,9 +1282,9 @@ section.site-footer .container {
   padding: 1rem; }
 
 section.site-footer a {
-  color: #004abc; }
+  color: #0285BC; }
   section.site-footer a:hover {
-    color: #ff8000; }
+    color: #F06724; }
   section.site-footer a:focus {
     outline: 2px solid #fec02f; }
 
@@ -1140,9 +1312,9 @@ section.site-footer .footer-social-links {
     padding-left: .3rem;
     transition: all 0.3s ease; }
     section.site-footer .footer-social-links a svg path {
-      fill: #004abc; }
+      fill: #0285BC; }
     section.site-footer .footer-social-links a:hover svg path {
-      fill: #1e1569; }
+      fill: #22489C; }
 
 @media (min-width: 991px) {
   .footer-secondary-links, section.site-footer .container {
@@ -1179,7 +1351,7 @@ footer .container {
   padding: 1rem; }
 
 footer a:hover {
-  color: #1e1569; }
+  color: #22489C; }
 
 footer a:focus {
   outline: 2px solid #fec02f; }
@@ -1198,7 +1370,7 @@ footer .bg-light-grey svg {
   footer .bg-light-grey svg .ca {
     fill: #fec02f; }
   footer .bg-light-grey svg .gov {
-    fill: #1e1569; }
+    fill: #22489C; }
 
 footer .cagov-logo {
   padding: 5px 2rem 5px 0; }
@@ -1241,5 +1413,29 @@ footer .copyright {
 @media (min-width: 768px) {
   .navigation {
     display: block !important; } }
+
+/* breadcrumbs */
+.breadcrumb {
+  padding-left: 0;
+  background-color: transparent;
+  font-size: 16px;
+  font-size: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0.75rem 1rem 0.75rem 0;
+  margin-bottom: 1rem;
+  list-style: none; }
+  .breadcrumb li:before {
+    content: "";
+    border-left: 1px dotted #777777;
+    margin: 0 15px;
+    font-size: 10px;
+    position: relative;
+    top: -2px; }
+  .breadcrumb > li + li:before {
+    padding: 0; }
+  .breadcrumb li:first-child:before {
+    border-left: none;
+    margin: 0 0; }
 
 /*# sourceMappingURL=index.css.map */
