--- a/src/components/branding/branding.html
+++ b/src/components/branding/branding.html
@@ -1,62 +1,69 @@
 <!--branding-->
 <div class="branding">
     <div class="container">
-        <a href="/" class="logo"><img class="logo-img" src="https://files.covid19.ca.gov/img/circle-logo.png"
-                alt="organization logo"></a>
+        <a href="http://myvaccinerecord.cdph.ca.gov" class="logo" title="Site logo">
+            <svg class="logo-img" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            width="80px" height="80px" viewBox="0 0 80 80" style="enable-background:new 0 0 80 80;" xml:space="preserve">
+       <style type="text/css">
+           .st0{fill:none;}
+           .st1{fill:#20469D;}
+           .st2{fill:#1686BD;}
+           .st3{fill:#FDBB0F;}
+           .st4{fill:#F47C20;}
+       </style>
+       <g>
+           <polygon class="st0" points="52,55.3 31.4,55.3 30.7,56.5 52,56.5 	"/>
+           <polygon class="st0" points="52,50.6 34.1,50.6 33.4,51.9 52,51.9 	"/>
+           <path class="st1" d="M71.7,75H53.8c-0.9,0-1.7,0.8-1.7,1.7s0.8,1.7,1.7,1.7h17.9c0.9,0,1.7-0.8,1.7-1.7S72.6,75,71.7,75z"/>
+           <path class="st1" d="M72.2,73.8c0.9,0,1.7-0.8,1.7-1.7c0-0.9-0.8-1.7-1.7-1.7H52v3.4H72.2z"/>
+           <path class="st2" d="M44.6,72.1c0,0.9,0.8,1.7,1.7,1.7H52v-3.4h-5.7C45.4,70.4,44.6,71.2,44.6,72.1z"/>
+           <path class="st2" d="M39.6,65.8c-0.9,0-1.7,0.8-1.7,1.7c0,0.9,0.8,1.7,1.7,1.7H52v-3.4H39.6z"/>
+           <path class="st1" d="M74.3,67.5c0-0.9-0.8-1.7-1.7-1.7H52v3.4h20.7C73.6,69.2,74.3,68.4,74.3,67.5z"/>
+           <path class="st2" d="M29.7,61.1c-0.9,0-1.7,0.8-1.7,1.7s0.8,1.7,1.7,1.7H52v-3.4H29.7z"/>
+           <path class="st1" d="M73.4,62.8c0-0.9-0.8-1.7-1.7-1.7H52v3.4h19.7C72.6,64.5,73.4,63.8,73.4,62.8z"/>
+           <path class="st1" d="M70.1,58.2c0-0.9-0.8-1.7-1.7-1.7H52v3.4h16.4C69.3,59.9,70.1,59.1,70.1,58.2z"/>
+           <path class="st3" d="M28.4,56.5c-0.9,0-1.7,0.8-1.7,1.7s0.8,1.7,1.7,1.7h0.4l1.9-3.4H28.4z"/>
+           <polygon class="st2" points="30.7,56.5 28.8,59.9 52,59.9 52,56.5 	"/>
+           <path class="st1" d="M63.6,55.3c0.9,0,1.7-0.8,1.7-1.7s-0.8-1.7-1.7-1.7H52v3.4H63.6z"/>
+           <polygon class="st2" points="52,51.9 33.4,51.9 31.4,55.3 52,55.3 	"/>
+           <path class="st3" d="M24.1,51.9c-0.9,0-1.7,0.8-1.7,1.7s0.8,1.7,1.7,1.7h7.3l1.9-3.4H24.1z"/>
+           <path class="st3" d="M20.4,47.2c-0.9,0-1.7,0.8-1.7,1.7c0,0.9,0.8,1.7,1.7,1.7h13.7l1.9-3.4H20.4z"/>
+           <path class="st1" d="M58.3,50.6c0.9,0,1.7-0.8,1.7-1.7c0-0.9-0.8-1.7-1.7-1.7H52v3.4H58.3z"/>
+           <polygon class="st2" points="52,47.2 36,47.2 34.1,50.6 52,50.6 	"/>
+           <path class="st3" d="M18.8,42.6c-0.9,0-1.7,0.8-1.7,1.7s0.8,1.7,1.7,1.7h17.9l1.9-3.4H18.8z"/>
+           <path class="st2" d="M54.8,44.3c0-0.9-0.8-1.7-1.7-1.7H38.6L36.7,46h16.3C54,46,54.8,45.2,54.8,44.3z"/>
+           <path class="st4" d="M17.1,38c-0.9,0-1.7,0.8-1.7,1.7c0,0.3,0.1,0.6,0.2,0.9L20,38H17.1z"/>
+           <path class="st3" d="M20,38l-4.3,2.6c0.3,0.5,0.8,0.8,1.4,0.8h22.2l1.9-3.4H20z"/>
+           <path class="st2" d="M47.6,39.7c0-0.9-0.8-1.7-1.7-1.7h-4.6l-1.9,3.4h6.5C46.8,41.4,47.6,40.6,47.6,39.7z"/>
+           <path class="st3" d="M42.8,35c0-0.9-0.8-1.7-1.7-1.7H27.8l-5.7,3.4h19C42,36.7,42.8,36,42.8,35z"/>
+           <path class="st4" d="M16.1,33.3c-0.9,0-1.7,0.8-1.7,1.7s0.8,1.7,1.7,1.7h6l5.7-3.4H16.1z"/>
+           <path class="st3" d="M37.3,30.4c0-0.9-0.7-1.7-1.7-1.7l-5.7,3.4h5.7C36.5,32.1,37.3,31.3,37.3,30.4z"/>
+           <path class="st4" d="M35.6,28.7H12.1c-0.9,0-1.7,0.8-1.7,1.7c0,0.9,0.8,1.7,1.7,1.7h17.8L35.6,28.7C35.6,28.7,35.6,28.7,35.6,28.7z
+               "/>
+           <path class="st4" d="M32.2,25.8c0-0.9-0.8-1.7-1.7-1.7H8.4c-0.9,0-1.7,0.8-1.7,1.7c0,0.9,0.8,1.7,1.7,1.7h22.1
+               C31.4,27.5,32.2,26.7,32.2,25.8z"/>
+           <path class="st4" d="M30.7,22.8c0.9,0,1.7-0.8,1.7-1.7c0-0.9-0.8-1.7-1.7-1.7H7.9c-0.9,0-1.7,0.8-1.7,1.7c0,0.9,0.8,1.7,1.7,1.7
+               H30.7z"/>
+           <path class="st4" d="M30.6,18.2c0.9,0,1.7-0.8,1.7-1.7c0-0.9-0.8-1.7-1.7-1.7h-24c-0.9,0-1.7,0.8-1.7,1.7c0,0.9,0.8,1.7,1.7,1.7
+               H30.6z"/>
+           <path class="st4" d="M32.4,11.9c0-0.9-0.8-1.7-1.7-1.7H3.3c-0.9,0-1.7,0.8-1.7,1.7s0.8,1.7,1.7,1.7h27.4
+               C31.7,13.6,32.4,12.8,32.4,11.9z"/>
+           <path class="st4" d="M5.3,8.9h25.3c0.9,0,1.7-0.8,1.7-1.7s-0.8-1.7-1.7-1.7H5.3c-0.9,0-1.7,0.8-1.7,1.7S4.4,8.9,5.3,8.9z"/>
+           <path class="st4" d="M5.7,4.3h25c0.9,0,1.7-0.8,1.7-1.7s-0.8-1.7-1.7-1.7h-25C4.8,0.9,4,1.7,4,2.6S4.8,4.3,5.7,4.3z"/>
+       </g>
+       </svg>
+       
+        </a>
         <a href="/" class="branding-logo">
-            <div class="logo-text"><span class="logo-state">State of California</span>
-                <span class="logo-dept">Office of Digital Innovation</span>
+            <div class="logo-text"><span class="logo-state">Digital COVID-19</span>
+                <span class="logo-dept">Vaccine Record</span>
             </div>
         </a>
 
 
-        <div class="mobile-icons">
-            <div class="mobile-search">
-                <button class="search-btn" aria-expanded="true">
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                        width="17px" height="17px" viewBox="0 0 17 17" style="enable-background:new 0 0 17 17;"
-                        xml:space="preserve">
-                        <path class="blue" d="M16.4,15.2l-4-4c2-2.6,1.8-6.5-0.6-8.9c-1.3-1.3-3-2-4.8-2S3.5,1,2.2,2.3c-2.6,2.6-2.6,6.9,0,9.6
-        c1.3,1.3,3,2,4.8,2c1.4,0,2.9-0.5,4.1-1.4l4.1,4c0.2,0.2,0.4,0.3,0.7,0.3c0.2,0,0.5-0.1,0.7-0.3C16.7,16.2,16.7,15.6,16.4,15.2
-        L16.4,15.2z M7,12c-1.3,0-2.6-0.5-3.5-1.4c-1.9-1.9-1.9-5.1,0-7C4.4,2.7,5.6,2.1,7,2.1s2.6,0.5,3.5,1.4c0.9,0.9,1.4,2.2,1.4,3.5
-        c0,1.3-0.5,2.6-1.4,3.5C9.5,11.5,8.3,12,7,12z" />
-                    </svg>
-                    Search
-                </button>
-            </div>
-            <div class="mobile-menu">
-
-                <button class="menu-btn toggle-menu">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <div class="menu-btn-text">Menu</div>
-                </button>
-            </div>
-        </div>
 
 
 
-        <div class="search-container">
-            <form id="site-search" action="">
-                <span class="sr-only" id="SearchInput">Custom Google Search</span>
-                <input type="text" id="q" name="q" aria-labelledby="SearchInput" placeholder="Search this website"
-                    class="search-textfield">
-                <button type="submit" class="search-submit">
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                        width="17px" height="17px" viewBox="0 0 17 17" style="enable-background:new 0 0 17 17;"
-                        xml:space="preserve">
-                        <path class="blue" d="M16.4,15.2l-4-4c2-2.6,1.8-6.5-0.6-8.9c-1.3-1.3-3-2-4.8-2S3.5,1,2.2,2.3c-2.6,2.6-2.6,6.9,0,9.6
-        c1.3,1.3,3,2,4.8,2c1.4,0,2.9-0.5,4.1-1.4l4.1,4c0.2,0.2,0.4,0.3,0.7,0.3c0.2,0,0.5-0.1,0.7-0.3C16.7,16.2,16.7,15.6,16.4,15.2
-        L16.4,15.2z M7,12c-1.3,0-2.6-0.5-3.5-1.4c-1.9-1.9-1.9-5.1,0-7C4.4,2.7,5.6,2.1,7,2.1s2.6,0.5,3.5,1.4c0.9,0.9,1.4,2.2,1.4,3.5
-        c0,1.3-0.5,2.6-1.4,3.5C9.5,11.5,8.3,12,7,12z" />
-                    </svg>
-                    <span class="sr-only">Submit</span>
-                </button>
-                <button class="search-close">Close</button>
-            </form>
-        </div>
     </div>
 
 </div>
