--- a/src/components/footer/footer-ar.html
+++ b/src/components/footer/footer-ar.html
@@ -36,18 +36,18 @@
             </a>
 
             <div class="footer-secondary-links">
-                <a href="https://vaxrecord.cdt.ca.gov/">Vaccine Record Portal Home</a>
-                <a href="https://www.ca.gov/use/">Conditions of Use</a>
-                <a href="https://www.ca.gov/privacy-policy/">Privacy Policy</a>
-                <a href="https://www.ca.gov/accessibility/">Accessibility</a>
-                <a href="http://cdph.ca.gov/covidvaccinerecord">Contact us</a>
+                <a href="https://vaxrecord.cdt.ca.gov/">الصفحة الرئيسية لسجل اللقاح</a>
+                <a href="https://www.ca.gov/use/">شروط الاستعمال</a>
+                <a href="https://www.ca.gov/privacy-policy/">سياسة الخصوصية</a>
+                <a href="https://www.ca.gov/accessibility/">تسهيلات الاستعمال</a>
+                <a href="http://cdph.ca.gov/covidvaccinerecord">اتصل بنا</a>
             </div>
 
 
 
         </div>
         <div class="container pt-0">
-            <p class="copyright">Copyright © 2021 State of California</p>
+            <p class="copyright">حقوق الطبع والنشر © ولاية كاليفورنيا 2021</p>
         </div>
     </div>
 </footer>
