--- a/src/components/footer/footer-es.html
+++ b/src/components/footer/footer-es.html
@@ -36,11 +36,11 @@
             </a>
 
             <div class="footer-secondary-links">
-                <a href="https://vaxrecord.cdt.ca.gov/">Vaccine Record Portal Home</a>
-                <a href="https://www.ca.gov/use/">Conditions of Use</a>
-                <a href="https://www.ca.gov/privacy-policy/">Privacy Policy</a>
-                <a href="https://www.ca.gov/accessibility/">Accessibility</a>
-                <a href="http://cdph.ca.gov/covidvaccinerecord">Contact us</a>
+                <a href="https://vaxrecord.cdt.ca.gov/">Página de inicio de Registro de vacunación</a>
+                <a href="https://www.ca.gov/use/">Condiciones de uso</a>
+                <a href="https://www.ca.gov/privacy-policy/">Política de privacidad</a>
+                <a href="https://www.ca.gov/accessibility/">Accesibilidad</a>
+                <a href="http://cdph.ca.gov/covidvaccinerecord">Comuníquese con nosotros</a>
             </div>
 
 
