--- a/src/components/footer/footer-tg.html
+++ b/src/components/footer/footer-tg.html
@@ -36,11 +36,11 @@
             </a>
 
             <div class="footer-secondary-links">
-                <a href="https://vaxrecord.cdt.ca.gov/">Vaccine Record Portal Home</a>
-                <a href="https://www.ca.gov/use/">Conditions of Use</a>
-                <a href="https://www.ca.gov/privacy-policy/">Privacy Policy</a>
+                <a href="https://vaxrecord.cdt.ca.gov/">Home ng Rekord ng Bakuna</a>
+                <a href="https://www.ca.gov/use/">Mga Kundisyon ng Paggamit</a>
+                <a href="https://www.ca.gov/privacy-policy/">Patakaran sa Privacy</a>
                 <a href="https://www.ca.gov/accessibility/">Accessibility</a>
-                <a href="http://cdph.ca.gov/covidvaccinerecord">Contact us</a>
+                <a href="http://cdph.ca.gov/covidvaccinerecord">Makipag-ugnayan sa Amin</a>
             </div>
 
 
