--- a/src/components/footer/footer-vi.html
+++ b/src/components/footer/footer-vi.html
@@ -36,11 +36,11 @@
             </a>
 
             <div class="footer-secondary-links">
-                <a href="https://vaxrecord.cdt.ca.gov/">Vaccine Record Portal Home</a>
-                <a href="https://www.ca.gov/use/">Conditions of Use</a>
-                <a href="https://www.ca.gov/privacy-policy/">Privacy Policy</a>
-                <a href="https://www.ca.gov/accessibility/">Accessibility</a>
-                <a href="http://cdph.ca.gov/covidvaccinerecord">Contact us</a>
+                <a href="https://vaxrecord.cdt.ca.gov/">Trang chủ Hồ sơ Vắc xin</a>
+                <a href="https://www.ca.gov/use/">Điều kiện Sử dụng</a>
+                <a href="https://www.ca.gov/privacy-policy/">Chính sách Quyền riêng tư</a>
+                <a href="https://www.ca.gov/accessibility/">Khả năng truy cập</a>
+                <a href="http://cdph.ca.gov/covidvaccinerecord">Liên hệ với Chúng tôi</a>
             </div>
 
 
