--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -6,3 +6,4 @@
 @import '../components/site-footer/_style';
 @import '../components/footer/_style';
 @import '../components/navigation/_style';
+@import '../components/breadcrumb/_style';
