--- a/src/components/footer/footer.html
+++ b/src/components/footer/footer.html
@@ -36,11 +36,11 @@
             </a>
 
             <div class="footer-secondary-links">
-                <a href="https://vaxrecord.cdt.ca.gov/">Vaccine Record Portal Home</a>
-                <a href="https://www.ca.gov/use/">Conditions of Use</a>
-                <a href="https://www.ca.gov/privacy-policy/">Privacy Policy</a>
-                <a href="https://www.ca.gov/accessibility/">Accessibility</a>
-                <a href="http://cdph.ca.gov/covidvaccinerecord">Contact us</a>
+                <a href="#">CA.gov home</a>
+                <a href="#">Conditions of Use</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Accessibility</a>
+                <a href="#">Contact Us</a>
             </div>
 
 
