--- a/src/components/branding/_style.scss
+++ b/src/components/branding/_style.scss
@@ -6,7 +6,7 @@
 	.container {
 		max-width: $w-lg;
 		margin: 0 auto;
-		padding: 5px 0 0 10px;
+		padding: 5px 0 0 0;
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: flex-start;
@@ -19,18 +19,17 @@
 			outline: 2px solid $secondary;
 		}
 	}
-	
 
 	.logo-img {
 		margin-left: 10px;
-		width:70px;
 	}
 	.branding-logo {
-		color: $primary-dark;
+		flex: 1 0 650px;
+		color: $black;
 		text-decoration: none;
-		margin-left: 5px;
+		margin-left: 10px;
 		margin-bottom: 10px;
-		margin-top: 0px;
+		margin-top: 10px;
 		&:focus {
 			outline: 2px solid $secondary;
 		}
@@ -39,19 +38,16 @@
 			display: inline-block;
 
 			.logo-state {
-				font-size: 1.4rem;
-				font-family: "Public Sans",sans-serif !important;
-				font-weight: 700;
+				font-size: $small-text;
 				margin: 0;
 				padding: 0;
-				height: 24px;
+				height: 20px;
 				line-height: 1.2em;
 				transition: all 0.3s;
 				display: block;
 			}
 			.logo-dept {
-				font-size: 1.4rem;
-				font-family: "Public Sans",sans-serif !important;
+				font-size: 1.75rem;
 				font-weight: 700;
 				margin: 0;
 				padding: 0;
